--- a/campusServer/app/views/users/index.html.erb
+++ b/campusServer/app/views/users/index.html.erb
@@ -1,11 +1,11 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Listing Users</h1>
-
+<%= will_paginate %>
 <table>
   <thead>
     <tr>
-      <th>Name</th>
+      <th>UserName</th>
       <th>Email</th>
       <th>Password</th>
       <th colspan="3"></th>
@@ -15,7 +15,7 @@
   <tbody>
     <% @users.each do |user| %>
       <tr>
-        <td><%= user.name %></td>
+        <td><%= user.username %></td>
         <td><%= user.email %></td>
         <td><%= user.password %></td>
         <td><%= link_to 'Show', user %></td>
@@ -29,3 +29,4 @@
 <br>
 
 <%= link_to 'New User', new_user_path %>
+<%= will_paginate %>
