Added user parameters, updated fixtures, fixed tests

--- a/campusServer/app/views/users/new.html.erb
+++ b/campusServer/app/views/users/new.html.erb
@@ -19,6 +19,27 @@
 
         <%= f.label :password_confirmation, "Confirmation" %>
         <%= f.password_field :password_confirmation, class: 'form-control' %>
+        
+        <%= f.label :firstname %>
+        <%= f.password_field :firstname, class: 'form-control' %>
+
+        <%= f.label :lastname %>
+        <%= f.password_field :lastname, class: 'form-control' %>
+
+        <%= f.label :bio %>
+        <%= f.password_field :bio, class: 'form-control' %>
+
+        <%= f.label :major %>
+        <%= f.password_field :major, class: 'form-control' %>
+
+        <%= f.label :hometown %>
+        <%= f.password_field :hometown, class: 'form-control' %>
+
+        <%= f.label :age %>
+        <%= f.password_field :age, class: 'form-control' %>
+
+        <%= f.label :gender %>
+        <%= f.password_field :gender, class: 'form-control' %>
 
         <%= f.submit "Create my account", class: "btn btn-primary" %>
     <% end %>
