--- a/campusServer/app/views/users/index.html.erb
+++ b/campusServer/app/views/users/index.html.erb
@@ -8,6 +8,13 @@
       <th>UserName</th>
       <th>Email</th>
       <th>Password</th>
+      <th>FirstName</th>
+      <th>LastName</th>
+      <th>Bio</th>
+      <th>Major</th>
+      <th>Hometown</th>
+      <th>Age</th>
+      <th>Gender</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -18,6 +25,17 @@
         <td><%= user.username %></td>
         <td><%= user.email %></td>
         <td><%= user.password %></td>
+        <td><%= user.firstname %></td>
+        <td><%= user.lastname %></td>
+        <td><%= user.bio %></td>
+        <td><%= user.major %></td>
+        <td><%= user.hometown %></td>
+        <td><%= user.age %></td>
+        <td><%= user.gender %></td>
+        <li>
+          <%= link_to user.username, user %>
+        </li>
+
         <td><%= link_to 'Show', user %></td>
         <td><%= link_to 'Edit', edit_user_path(user) %></td>
         <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
