--- a/campusServer/app/views/users/new.html.erb
+++ b/campusServer/app/views/users/new.html.erb
@@ -6,7 +6,7 @@
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     <%= form_for(@user) do |f| %>
-        <%= render 'shared/error_messages' %>
+        <%= render 'shared/error_messages', object: f.object %>
 
         <%= f.label :username %>
         <%= f.text_field :username, class: 'form-control' %>
