--- a/campusServer/app/views/static_pages/home.html.erb
+++ b/campusServer/app/views/static_pages/home.html.erb
@@ -3,6 +3,9 @@
       <aside class="col-md-4">
         <section class="user_info">
         </section>
+        <section class="stats">
+          <%= render 'shared/stats' %>
+        </section>
         <section class="micropost_form">
         </section>
       </aside>
